Rewrite of ZMQ support, adding ZAP support.